add support for HODL invoices
